[package]
name = "hackattic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = { version = "2.5.0", features = ["json"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.13.0"
sha2 = "0.10.2"
flate2 = "1.0"
num-traits = "0.2"
num-derive = "0.3"
byteorder = "1.4.3"
num_enum = "0.5.7"
regex = "1.6.0"
md5 = "0.7.0"
